--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   flow_builder: ^0.0.9
   ionicons: ^0.2.2
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
 
 
 flutter_native_splash:
