--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.1+1
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
@@ -25,7 +25,6 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   flutter_gen: ^5.3.1
-  auto_route: ^7.6.0
   flutter_native_splash: ^2.3.1
   retrofit_generator: ^7.0.7
   dotted_border: ^2.0.0+3
@@ -45,6 +44,10 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   cloud_firestore: ^4.8.4
+  google_sign_in: ^6.1.4
+  font_awesome_flutter: ^10.5.0
+  go_router: ^10.1.1
+  go_router_builder: ^2.3.0
 
 
 flutter_native_splash:
@@ -69,7 +72,6 @@ dev_dependencies:
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.1
   injectable_generator: ^2.1.6
-  auto_route_generator: ^7.1.2
 
 flutter:
   uses-material-design: true
