--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   cloud_firestore: ^4.8.4
   google_sign_in: ^6.1.4
   font_awesome_flutter: ^10.5.0
-  go_router: ^10.1.1
-  go_router_builder: ^2.3.0
+  firebase_messaging: ^14.6.7
+  auto_route: ^7.6.0
 
 
 flutter_native_splash:
@@ -55,12 +55,12 @@ flutter_native_splash:
   ios: true
   web: false
 
-  color: "#2196F3"
+  color: "#F8BBD0"
   image: "assets/images/splash_icon.png"
 
 
   android_12:
-    color: "#2196F3"
+    color: "#F8BBD0"
     image: "assets/images/splash_icon.png"
 
 dev_dependencies:
@@ -72,6 +72,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.1
   injectable_generator: ^2.1.6
+  auto_route_generator: ^7.1.2
 
 flutter:
   uses-material-design: true
