--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   cloud_firestore: ^4.8.4
   google_sign_in: ^6.1.4
   font_awesome_flutter: ^10.5.0
-  firebase_messaging: ^14.6.7
   auto_route: ^7.6.0
+  flutter_facebook_auth: ^6.0.1
 
 
 flutter_native_splash:
@@ -55,12 +55,11 @@ flutter_native_splash:
   ios: true
   web: false
 
-  color: "#F8BBD0"
+  color: "#8165EA"
   image: "assets/images/splash_icon.png"
 
-
   android_12:
-    color: "#F8BBD0"
+    color: "#8165EA"
     image: "assets/images/splash_icon.png"
 
 dev_dependencies:
