--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   auto_route: ^7.6.0
   flutter_facebook_auth: ^6.0.1
+  flutter_staggered_grid_view: ^0.7.0
+  geolocator: ^10.0.0
+  cached_network_image: ^3.2.3
+  envied: ^0.3.0+3
 
 
 flutter_native_splash:
